[project]
name = "agenticai-langraph-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fitz>=0.0.1.dev2",
    "langchain>=1.0.1",
    "langchain-community>=0.4",
    "langchain-groq>=1.0.0",
    "langchain-tavily>=0.2.12",
    "langgraph>=1.0.1",
    "langgraph-cli[inmem]>=0.4.4",
    "langsmith>=0.4.37",
    "pillow>=12.0.0",
    "pymupdf>=1.26.5",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
